Fixed Overflow X showing while animation

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@
   --error-color: #d9534f;
 }
 
+html{
+  max-width:100%;
+  overflow-x:hidden;  
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -57,8 +62,6 @@ pre {
   background-color: var(--primary-color);
   color:#fff;
   padding:10px 0;
-
-  
 }
 .navigation .flex{
   justify-content: space-between;
@@ -66,77 +69,86 @@ pre {
 
 .navigation .container nav a{
   padding:10px;
-  margin:20px;
+  margin:0 10px;
   color:#fff;
+}
+.navigation nav ul{
+  display: flex;
 }
 
 .navigation .container nav a:hover{
-  border-bottom:1px solid #fff;
+  border-bottom:2px solid #fff;
 }
 
 /*showcase*/
 .showcase {
-  height:370px;
+  height:400px;
   position: relative;
 }
 
 .showcase .grid{
   grid-template-columns: 55% 45%;
-  overflow: visible;
-  grid-gap:30px;
+  gap:30px;
+  overflow:visible;
 }
 
-.showcase .grid .form{
-  justify-self: flex-end;
-  width:350px;
-  height:350px;
+ .form{
   position: relative;
-  top:50px;
-  z-index: 1000;
-  padding:30px;
+  top:60px;
+  height:350px;
+  width:380px;
+  justify-self: end;
+ padding:30px;
+ z-index:1000;
+ animation: slideInFromRight 1s ease-in;
 }
-.showcase .grid .form form{
-  padding:5px;
-} 
 
-.showcase .grid .form .form-input input{
-  border:none;
+ .form .form-input input{
+  border:0;
   outline:none;
-  margin:20px 0;
-  padding-bottom:10px;
+  padding:3px;
   border-bottom:1px solid #f4f4f4;
   width:100%;
+  font-size:16px;
+} 
+
+.form .form-input{
+  margin:30px 0;
 }
 
 .showcase::before,
 .showcase::after{
-  content: '';
+  content:'';
   position: absolute;
   height:100px;
   bottom:-70px;
+  right:0;
   left:0;
-right:0;
-  background:#fff;
-  transform:skewY(-3deg);
-  -webkit-transform: skewY(-3deg);
+ background:#fff;
+  transform: skewY(-3deg);
+ -webkit-transform: skewY(-3deg);
   -moz-transform: skewY(-3deg);
   -ms-transform: skewY(-3deg);
 }
 
-.showcase .showcase-text {
+ .showcase .showcase-text {
   animation:slideInFromLeft 1s ease-in;
-}
+} 
 
-.showcase .form{
-  animation:slideInFromRight 1s ease-in;
-}
 
 /* Stats */
 .stats{
-  margin-top:6rem;
+  padding-top:70px;
   text-align: center;
  animation:slideInFromBottom 1s ease-in;
 }
+
+.stats-heading{
+  max-width: 500px;
+  margin: auto;
+}
+
+
 
 
 /* Responsive */
